@@ -369,6 +369,12 @@
 								value="1"{if isset($variables.existing_assignments.reference_document_limit)} checked{/if}>
 							{trans("limit to reference document")}
 						</label>
+						<label id="a_assignment_type_limit" style="display: none;">
+							<input type="checkbox" name="{$variable_prefix}[existing_assignments][assignment_type_limit]"
+								id="assignment_type_limit"
+								value="1"{if isset($variables.existing_assignments.assignment_type_limit)} checked{/if}>
+							{trans("limit to assignment type")}
+						</label>
 					</TD>
 				</TR>
 
